<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/a"
            android:layout_width="@dimen/dimen76dp"
            android:layout_height="@dimen/dimen76dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:text="@string/a" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/login_to_apparel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/login_to_apparel" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen56dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen25dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:background="@drawable/textinput_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:drawableTint="@color/hint"
            android:fontFamily="@font/bold"
            android:gravity="center_vertical"
            android:hint="@string/hint_username"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen56dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:background="@drawable/textinput_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:drawableTint="@color/hint"
            android:fontFamily="@font/bold"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_forgot_pass"
            style="@style/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen25dp"
            android:text="@string/forgot_pass" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/login_btn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dimen20dp"
                android:layout_marginTop="@dimen/dimen15dp"
                android:layout_marginEnd="@dimen/dimen20dp"
                android:background="@color/line"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/or_bg"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingTop="@dimen/dimen7dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="Or"
                android:textColor="@color/line"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_login_fb"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="@dimen/dimen25dp"
                android:layout_marginEnd="@dimen/dimen20dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/btn_login_google"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="@dimen/dimen25dp"
                android:layout_marginEnd="@dimen/dimen20dp"
                android:src="@drawable/google_plus" />

            <ImageView
                android:id="@+id/btn_login_apple"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="@dimen/dimen25dp"
                android:src="@drawable/apple" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dont_have_account"
                style="@style/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen3dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/dont_have_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/sign_up"
                style="@style/dont_have_account"
                android:textColor="@color/accent" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>