<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E5E5E5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cart_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_back_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@+id/cart"
            style="@style/apparel_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cart" />

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:src="@drawable/ic_search" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginBottom="5dp"
        tools:listitem="@layout/item_checkout_page" />

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:background="#E5E5E5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sub_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="--- VNĐ"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="Rs. 0"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_6dp"
                android:layout_toLeftOf="@id/total_price"
                android:text="@string/_3_items"
                android:textSize="@dimen/dimen_12dp" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="--- VNĐ"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_24dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_checkout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_64dp"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/bold"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_18dp" />
    </LinearLayout>


</LinearLayout>