<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.ecomercesystem.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".BlankFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"
                android:id="@+id/btn_menu_toolbar"/>
            <TextView
                style="@style/apparel_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apparel" />

            <FrameLayout
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:background="@drawable/ic_notification">

                <ImageView
                    android:id="@+id/dot_notification"
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:layout_gravity="top|end"
                    android:src="@drawable/blue_dot" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen64dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/searchbox_bg"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/dimen_10dp"
            android:hint="@string/hint_seachbox"
            android:padding="@dimen/dimen_20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_seachbox"
            android:textSize="@dimen/dimen_14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_categories_home"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            tools:listitem="@layout/item_categoties_home" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen25dp"
            android:layout_marginBottom="@dimen/dimen25dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/recommended"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/bold"
                android:text="@string/see_all"
                android:textSize="@dimen/dimen_20dp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_recommended"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.2"
            tools:listitem="@layout/item_recommended_home" />

    </LinearLayout>
</layout>